16th Commit The Datetimepicker of the @ng-matero/extensions, has been added. The Luxon datetime library has been added, together with its Typescript declarations type file. The material.module.ts file has been updated accordingly. The mtx_theme.scss file has been added to theme the ng-matero datetime picker, and then it has been imported into the project’s styles.scss file. The DatetimeComponent has been updated to be aligned to the @ng-matero datetime-picker and the MTX_DATETIME_FORMATS provider has been added to the providers arrays section of the component for parsing and formatting capabilities. The component template has also updated accordingly. The dateTimeString method has been added in the ItemsFormFieldsService to transform the   itemCrTimestamp: Date; value to the format supported by the ng-matero datetime picker and Luxon. It is called from the updateFormFieldsInitialValues method for datetime controlType components. The zone-flags.ts file has been added under src directory and then it has been added into the polyfills section into the angular.json and into the files section into the tsconfig.app.json file. This is to support a passive event listener, avoiding the respective Warning message, when we first click on the date selection of the datetime picker. Side adjustments here and there (form.component.scss).

--- a/src/app/dynamic-form/form/form.component.scss
+++ b/src/app/dynamic-form/form/form.component.scss
@@ -18,12 +18,14 @@ mat-card-footer {
     justify-content: flex-end;
 }
 
-.mat-component {
-    max-width: 500px;
+.mat-component, .mat-dtpicker {
     display: flex;
     flex-direction: row;
-    margin: 2em auto;
     gap: 25px;
     align-items: center;
     justify-content:flex-start ;
+}
+
+.mat-component {
+    margin: 2em auto;
 }
